--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       </div>
     </a>
     <h1>HTML & CSS Basics Summary</h1>
-    <img src="images/html-css.png" alt="HTML and CSS logos" />
   </header>
   <main>
     <section>
@@ -80,10 +79,13 @@
         <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">the MDN CSS property reference</a>.
       </p>
     </section>
+
   </main>
   <footer>
     <a href="pdfs/html-css-basics-summary.pdf" target="_blank">Download PDF Summary</a>
     <p>(c) Academind GmbH</p>
+    <img class="icon" src="images/html-css.png" alt="HTML and CSS logos" />
+
   </footer>
 </body>
 
